fix dark mode and avt position

--- a/Web-Front-end/src/components/Header/Header.module.css
+++ b/Web-Front-end/src/components/Header/Header.module.css
@@ -35,6 +35,7 @@
     margin-right: 15px;
     display: flex;
     gap: 16px;
+    align-items: center;
 }
 
 .Account {
